correct mistakes header (second)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header-conteiner conteiner">
-            <nav class="header-navigation">
+            <nav class="header-navigation conteiner">
                 <a class="logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
                 <ul class="header-menu-list">
                     <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
