correct mistakes header (3)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-conteiner conteiner">
+        <div class="conteiner header-conteiner">
             <nav class="header-navigation conteiner">
                 <a class="logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
                 <ul class="header-menu-list">
