--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="conteiner header-conteiner">
-            <nav class="header-navigation conteiner">
+        <div class="container header-container">
+            <nav class="header-navigation container">
                 <a class="logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
                 <ul class="header-menu-list">
                     <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
@@ -31,7 +31,7 @@
     </header>
     <main class="main">
         <section class="hero">
-            <div class="conteiner hero-conteiner">
+            <div class="container hero-container">
                 <h1 class="hero-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="hero-primary-button">Order Service</button>
             </div>
