--- a/index.html
+++ b/index.html
@@ -37,25 +37,27 @@
             </div>
         </section>
         <section class="features">
-            <h2 class="visually-hidden">Features</h2>
-            <ul class="features-list">
-                <li class="features-items">
-                    <h3 class="features-subtitles section-subtitle">Strategy</h3>
-                    <p class="features-item-text section-paragraf">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li class="features-items">
-                    <h3 class="features-subtitles section-subtitle">Punctuality</h3>
-                    <p class="features-item-text section-paragraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li class="features-items">
-                    <h3 class="features-subtitles section-subtitle">Diligence</h3>
-                    <p class="features-item-text section-paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li class="features-items">
-                    <h3 class="features-subtitles section-subtitle">Technologies</h3>
-                    <p class="features-item-text section-paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+            <div class="container features-container">
+                <h2 class="visually-hidden">Features</h2>
+                <ul class="features-list">
+                    <li class="features-items">
+                        <h3 class="features-subtitles section-subtitle">Strategy</h3>
+                        <p class="features-item-text section-paragraf">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="features-items">
+                        <h3 class="features-subtitles section-subtitle">Punctuality</h3>
+                        <p class="features-item-text section-paragraf">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="features-items">
+                        <h3 class="features-subtitles section-subtitle">Diligence</h3>
+                        <p class="features-item-text section-paragraf">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="features-items">
+                        <h3 class="features-subtitles section-subtitle">Technologies</h3>
+                        <p class="features-item-text section-paragraf">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+        </div>
         </section>
         <section class="team">
             <h2 class="team-title section-title">Our Team</h2>
