--- a/index.html
+++ b/index.html
@@ -60,64 +60,68 @@
         </div>
         </section>
         <section class="team">
-            <h2 class="team-title section-title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <img src="./images/img1.jpg" width="264" height="260" alt="Mark Guerrero" class="team-image">
-                    <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-                    <p class="team-item-text section-paragraf">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                    <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-                    <p class="team-item-text section-paragraf">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/img3.jpg" width="264" height="260" alt="Camila Garcia" class="team-image">
-                    <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-                    <p class="team-item-text section-paragraf">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/img4.jpg" width="264" height="260" alt="Daniel Wilson" class="team-image">
-                    <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-                    <p class="team-item-text section-paragraf">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container team-container">
+                <h2 class="team-title section-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img src="./images/img1.jpg" width="264" height="260" alt="Mark Guerrero" class="team-image">
+                        <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+                        <p class="team-item-text section-paragraf">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
+                        <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+                        <p class="team-item-text section-paragraf">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img3.jpg" width="264" height="260" alt="Camila Garcia" class="team-image">
+                        <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+                        <p class="team-item-text section-paragraf">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="./images/img4.jpg" width="264" height="260" alt="Daniel Wilson" class="team-image">
+                        <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+                        <p class="team-item-text section-paragraf">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="portfolio">
-            <h2 class="portfolio-title section-title">Our Portfolio</h2>
-            <ul class="portfolio-list">
-                <li class="portfolio-item">
-                    <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
-                    <p class="portfolio-item-text section-paragraf">App</p>
-                </li>
-                <li class="portfolio-item">
-                    <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Cashless Payment</h3>
-                    <p class="portfolio-item-text section-paragraf">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                    <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
-                    <p class="portfolio-item-text section-paragraf">App</p>
-                </li>
-                <li class="portfolio-item">
-                    <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
-                    <p class="portfolio-item-text section-paragraf">Marketing</p>
-                </li>
-                <li class="portfolio-item">
-                    <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Screen Illustrations</h3>
-                    <p class="portfolio-item-text section-paragraf">Design</p>
-                </li>
-                <li class="portfolio-item">
-                    <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses" class="portfolio-image">
-                    <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
-                    <p class="portfolio-item-text section-paragraf">Marketing</p>
-                </li>
-            </ul>
+            <div class="container portfolio-container">
+                <h2 class="portfolio-title section-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
+                        <p class="portfolio-item-text section-paragraf">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Cashless Payment</h3>
+                        <p class="portfolio-item-text section-paragraf">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
+                        <p class="portfolio-item-text section-paragraf">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
+                        <p class="portfolio-item-text section-paragraf">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Screen Illustrations</h3>
+                        <p class="portfolio-item-text section-paragraf">Design</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses" class="portfolio-image">
+                        <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
+                        <p class="portfolio-item-text section-paragraf">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
