--- a/index.html
+++ b/index.html
@@ -65,23 +65,31 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img src="./images/img1.jpg" width="264" height="260" alt="Mark Guerrero" class="team-image">
-                        <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-                        <p class="team-item-text section-paragraf">Product Designer</p>
+                        <div class="container team-name">
+                            <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+                            <p class="team-item-text section-paragraf">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                        <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-                        <p class="team-item-text section-paragraf">Frontend Developer</p>
+                        <div class="container team-name">
+                            <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+                            <p class="team-item-text section-paragraf">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img3.jpg" width="264" height="260" alt="Camila Garcia" class="team-image">
-                        <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-                        <p class="team-item-text section-paragraf">Marketing</p>
+                        <div class="container team-name">
+                            <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+                            <p class="team-item-text section-paragraf">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img4.jpg" width="264" height="260" alt="Daniel Wilson" class="team-image">
-                        <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-                        <p class="team-item-text section-paragraf">UI Designer</p>
+                        <div class="container team-name">
+                            <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+                            <p class="team-item-text section-paragraf">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
