--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </li>
                     <li class="team-item">
                         <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                        <div class="container team-name">
+                        <div class="container-team-name">
                             <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                             <p class="team-item-text section-paragraf">Frontend Developer</p>
                         </div>
