correct mistakes section 4

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </li>
                     <li class="team-item">
                         <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                        <div class="container-team-name">
+                        <div class="container team-name">
                             <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                             <p class="team-item-text section-paragraf">Frontend Developer</p>
                         </div>
@@ -100,33 +100,45 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <img src="./images/portfolio1.jpg" width="360" height="300" alt="Banking App" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
                         <p class="portfolio-item-text section-paragraf">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio2.jpg" width="360" height="300" alt="Cashless Payment" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Cashless Payment</h3>
                         <p class="portfolio-item-text section-paragraf">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio3.jpg" width="360" height="300" alt="Meditation App" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
                         <p class="portfolio-item-text section-paragraf">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio4.jpg" width="360" height="300" alt="Taxi Service" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
                         <p class="portfolio-item-text section-paragraf">Marketing</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio5.jpg" width="360" height="300" alt="Screen Illustrations" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Screen Illustrations</h3>
                         <p class="portfolio-item-text section-paragraf">Design</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio6.jpg" width="360" height="300" alt="Online Courses" class="portfolio-image">
+                        <div class="container app-text">
                         <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
                         <p class="portfolio-item-text section-paragraf">Marketing</p>
+                        </div>
                     </li>
                 </ul>
             </div>
