--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-        <a class="logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+        <a class="logo-footer logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
         <p class="footer-text section-paragraf">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
