--- a/index.html
+++ b/index.html
@@ -60,33 +60,33 @@
         </div>
         </section>
         <section class="team">
-            <div class="container team-container">
+            <div class="team-container">
                 <h2 class="team-title section-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
                         <img src="./images/img1.jpg" width="264" height="260" alt="Mark Guerrero" class="team-image">
-                        <div class="team-name">
+                        <div class="container team-name">
                             <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
                             <p class="team-item-text section-paragraf">Product Designer</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                        <div class="team-name">
+                        <div class="container team-name">
                             <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                             <p class="team-item-text section-paragraf">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img3.jpg" width="264" height="260" alt="Camila Garcia" class="team-image">
-                        <div class="team-name">
+                        <div class="container team-name">
                             <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
                             <p class="team-item-text section-paragraf">Marketing</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img4.jpg" width="264" height="260" alt="Daniel Wilson" class="team-image">
-                        <div class="team-name">
+                        <div class="container team-name">
                             <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
                             <p class="team-item-text section-paragraf">UI Designer</p>
                         </div>
@@ -146,7 +146,7 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-        <a class="logo-footer logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
         <p class="footer-text section-paragraf">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
