--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         </section>
         <section class="team">
-            <div class="team-container">
+            <div class="container team-container">
                 <h2 class="team-title section-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-item">
@@ -93,7 +93,7 @@
                     </li>
                 </ul>
             </div>
-        </section>        
+        </section>       
         <section class="portfolio">
             <div class="container portfolio-container">
                 <h2 class="portfolio-title section-title">Our Portfolio</h2>
