--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <nav class="header-navigation container">
+            <nav class="header-navigation">
                 <a class="logo" href="./index.html">Web<span class="header-logo-color">Studio</span></a>
                 <ul class="header-menu-list">
                     <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
@@ -65,28 +65,28 @@
                 <ul class="team-list">
                     <li class="team-item">
                         <img src="./images/img1.jpg" width="264" height="260" alt="Mark Guerrero" class="team-image">
-                        <div class="container team-name">
+                        <div class="team-name">
                             <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
                             <p class="team-item-text section-paragraf">Product Designer</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img2.jpg" width="264" height="260" alt="Tom Ford" class="team-image">
-                        <div class="container team-name">
+                        <div class="team-name">
                             <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                             <p class="team-item-text section-paragraf">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img3.jpg" width="264" height="260" alt="Camila Garcia" class="team-image">
-                        <div class="container team-name">
+                        <div class="team-name">
                             <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
                             <p class="team-item-text section-paragraf">Marketing</p>
                         </div>
                     </li>
                     <li class="team-item">
                         <img src="./images/img4.jpg" width="264" height="260" alt="Daniel Wilson" class="team-image">
-                        <div class="container team-name">
+                        <div class="team-name">
                             <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
                             <p class="team-item-text section-paragraf">UI Designer</p>
                         </div>
